# follyKiller

./: CMakeLists.txt  main.cpp
cmake/: FindFolly.cmake
